# jL-Wallpaper_GTK4

./: README.md  com.github.iradraconis.jLWallpaper.json~  meson.build
.flatpak-builder/cache/refs/heads/aarch64-com.github.iradraconis.jLWallpaper.json/: build-Pillow  init
.flatpak-builder/cache/refs/heads/x86_64-com.github.iradraconis.jLWallpaper.json/: build-Pillow  init
.flatpak-builder/checksums/: x86_64-com.github.iradraconis.jLWallpaper.json
.flatpak-builder/downloads/c3c4ed2ff6760e98d262e0cc9c9a7f7b8a9f61aa4d47c58835cdaf7b0b8811bb/: Pillow-9.4.0-pp39-pypy39_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
.flatpak-builder/downloads/e621b0246192d3b9cb1dc62c78cfa4c6f6d2ddc0ec207d43c0dedecb914f152a/: Pillow-9.4.0-pp39-pypy39_pp73-manylinux_2_28_x86_64.whl
data/: com.github.iradraconis.jLWallpaper.appdata.xml.in  com.github.iradraconis.jLWallpaper.desktop.in  com.github.iradraconis.jLWallpaper.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: check_modules.py  jl-wallpaper.gresource.xml  jl-wallpaper.in  main.py  meson.build  pics_darker.py  window.blp  window.py  window.ui
